; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_mbcs.c_mbcs_pioaddr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_mbcs.c_mbcs_pioaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbcs_soft = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.mbcs_soft*, i64)* @mbcs_pioaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mbcs_pioaddr(%struct.mbcs_soft* %0, i64 %1) #0 {
  %3 = alloca %struct.mbcs_soft*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.mbcs_soft* %0, %struct.mbcs_soft** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.mbcs_soft*, %struct.mbcs_soft** %3, align 8
  %7 = getelementptr inbounds %struct.mbcs_soft, %struct.mbcs_soft* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = add nsw i64 %8, %9
  store i64 %10, i64* %5, align 8
  %11 = load i64, i64* %5, align 8
  ret i64 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
